1/1.11/manifests/service-mainapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: mainapp-svc
spec:
  type: ClusterIP
  selector:
    app: main-pingpong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
