1/1.11/manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong-svc
spec:
  type: ClusterIP
  selector:
    app: main-pingpong
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 3001
